Extended tax calculator funcionalities (#12)
* Extended tax calculator funcionalities

* Improved logger with parameter notation