@@ -1,8 +1,8 @@
 buildscript {
     ext {
-        lombokVersion = '1.18.20'
-        spockVersion = '2.0-groovy-3.0'
-        springBootVersion = '2.5.4'
+        lombokVersion = '1.18.18'
+        spockVersion = '1.3-groovy-2.5'
+        springBootVersion = '2.4.2'
         springDependencyManagementVersion = '1.0.11.RELEASE'
         springFoxStarterVersion = '3.0.0'
         springFoxUiVersion = '3.0.0'
@@ -10,7 +10,6 @@ buildscript {
 }
 
 plugins {
-    id 'application'
     id 'checkstyle'
     id 'groovy'
     id 'io.spring.dependency-management' version "${springDependencyManagementVersion}"
@@ -39,10 +38,6 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation "org.spockframework:spock-core:${spockVersion}"
     testImplementation "org.spockframework:spock-spring:${spockVersion}"
-}
-
-application {
-    mainClassName = 'pl.futurecollars.invoicing.App'
 }
 
 checkstyle {
@@ -89,9 +84,9 @@ java {
 
 test {
     finalizedBy jacocoTestReport
-    finalizedBy jacocoTestCoverageVerification
-    useJUnitPlatform()
-    jvmArgs '--enable-preview'
 }
 
+check {
+    finalizedBy jacocoTestCoverageVerification
+}
 
